# homura

./: .gitattributes  .gitignore  AOT_PLAN.md  CLAUDE.md  Cargo.toml  DYNAMIC_DIMS_TODO.md  Makefile  README.md  RUNTIME_SHAPE_OPS_PLAN.md  build.rs  debug.md  env-llvm21-dev.sh  native_hf_plan.md  perf.md  vectorize.md
docs/: chat.md  design.md  kv-cache.md
examples/: add.rs  mlp.rs  onnx_mnist.rs  onnx_resnet.rs  ops.rs
scripts/: download_gpt2.sh  download_mnist.sh  profile.py
src/: cache.rs  compiler.rs  cpu_affinity.rs  cpu_caps.rs  dtype.rs  generate.rs  gguf.rs  graph_builder.rs  kv_generate.rs  lib.rs  llvm_ffi.rs  log.rs  main.rs  op.rs  progress.rs  runtime.rs  shape.rs  tensor.rs  tokenizer.rs  trace.rs
src/graph_builder/: emit_arithmetic.rs  emit_linalg.rs  emit_quant.rs  emit_reshape.rs  mod.rs
src/hf/: chat.rs  config.rs  emitter.rs  emitter_quant.rs  mod.rs  model.rs  precompute.rs  safetensors.rs  tokenizer.rs  weights.rs
src/onnx/: emitter.rs  mapper.rs  mod.rs  parser.rs  proto.rs  sym_shapes.rs
tests/: gguf_e2e.rs  gpt2_e2e.rs  mnist_e2e.rs  qwen2_debug.rs  qwen2_e2e.rs  qwen2_numerical.rs  resnet18_e2e.rs
tests/fixtures/: resnet18-v1-7.onnx
