[package]
name = "homura"
version = "0.1.0"
edition = "2024"

[dependencies]
melior = { git = "https://github.com/mlir-rs/melior.git", branch = "main", features = ["ods-dialects"] }
mlir-sys = { git = "https://github.com/mlir-rs/mlir-sys.git", branch = "support-shared-libs" }
prost = "0.13"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
fancy-regex = "0.14"
llvm-sys = "211.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.11.0"

[dev-dependencies]
image = "0.25"

[build-dependencies]
prost-build = "0.13"
protobuf-src = "2"

[profile.dev]
opt-level = 2

[patch.crates-io]
mlir-sys = { git = "https://github.com/mlir-rs/mlir-sys.git", branch = "support-shared-libs" }

