[package]
name = "homura"
version = "0.1.0"
edition = "2024"

[dependencies]
melior = { version = "0.26", features = ["ods-dialects"] }
mlir-sys = "210.0"
prost = "0.13"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
fancy-regex = "0.14"
llvm-sys = "211.0.0"
rayon = "1.11.0"
atty = "0.2.14"

[dev-dependencies]
image = "0.25"
tempfile = "3"

[build-dependencies]
prost-build = "0.13"
protobuf-src = "2"

[profile.dev]
opt-level = 2


